--- a/index.html
+++ b/index.html
@@ -1,1 +1,174 @@
+<style type="text/css">
+    table          {border:ridge 2px #000;}
+    table td       {border:inset 0px #000;}
+    table tr#Stier  {background-color:#E15554;}
+    table tr#Atier  {background-color:#E1893F;}
+    table tr#Btier  {background-color:#E1BC29;}
+    table tr#Ctier  {background-color:#3BB273;}
+    table tr#Dtier  {background-color:#4D9DE0;}
+    table tr#Ftier  {background-color:#7768AE;}
+    table tr#Other  {background-color:#616065;}
+  </style>
 
+  <table>
+    <tr id="Stier">
+      <td>S</td>
+      <td style="background-color:#616065"> <img src="media/puddle.png" alt="Puddle"></td>
+    </tr>
+    <tr id="Atier">
+      <td>A</td>
+      <td style="background-color:#616065">Cell 2.2</td>
+    </tr>
+    <tr id="Btier">
+      <td>B</td>
+      <td style="background-color:#616065">Cell 3.2</td>
+    </tr>
+    <tr id="Ctier">
+      <td>C</td>
+      <td style="background-color:#616065">Cell 4.2</td>
+    </tr>
+    <tr id="Dtier">
+      <td>D</td>
+      <td style="background-color:#616065">Cell 5.2</td>
+    </tr>
+    <tr id="Ftier">
+      <td>F</td>
+      <td style="background-color:#616065">Cell 6.2</td>
+    </tr>
+  </table>
+<!--
+<html>
+<head>
+<!- Kat: Chose to include the Bootstrap 4 here ->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<!- End Bootstrap 4 ->  
+<!- Kat: Adding meta tag as instructed on w3schools->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <style>
+    body { /* Gabe: If everything is going to have the same font family, might as well just apply it to the body tag */
+      font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    
+    /* Gabe: SEE body TAG COMMENT*/
+    /*p {*/ /* Gabe: I put the font family change in the style tag because I think it makes the more important for the viewer to see this than the other styles in the styles.css. *//*
+      font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }*/
+/* Kat added h1 and h2 to style so they would be centered and font family would be uniform throughout page. */
+    h1, h2 { /* Gabe: Reducing redundancy, combined h1 and h2 tags together */
+      text-align: center; /*font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;*/
+    }
+    /* Gabe: SEE h1, h2 TAG COMMENT */
+    /*h2 {
+      text-align: center; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }*/
+    nick-name { /* Gabe: Created my own class to make the code for Bella's nickname more readable*/
+      font-style: italic;
+    }
+    h1, h2 {
+      text-align: center;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      letter-spacing: 7px;
+      color: #1C110A
+    }
+    .navbar
+        {
+            box-shadow: 0px 6px rgb(255, 255, 255);
+        }
+  </style>
+<title>Our Pets</title> <!-Kat: changed title name to reflect the content->
+</head>
+<body>
+  <nav class="navbar navbar-expand-sm">
+    <a class="navbar-brand" href="#">
+      <!-Changing our logo to white to match our aesthetic->
+    <img src="media/white-pawprint.png" alt="pawprint" width="60">
+  </a>
+  
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">
+          <span style="color:rgb(255, 255, 255)"> Welcome </span>
+    </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="fun fact.html">
+          <span style="color:rgb(255, 255, 255)"> Fun Facts </span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+<!- group collaboration; Kat change
+  d title name and structure; each student added thier respective pet info->
+  <br>
+  <h2>How do we compare?</h2>
+  <table style="width:65%">
+      <tr>
+        <th>Name</th>
+        <th>Breed</th>
+        <th>Favorite activity</th> 
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>Soba</td>
+        <td>Domestic long-hair cat</td>
+        <td>Eating plants and chasing the laser pointer</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>Buck</td>
+        <td>Border Collie</td>
+        <td>Chasing anything that moves</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>Bella</td>
+        <td>Weimaraner</td>
+        <td>Hunting, and barking at birds</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>Lily</td>
+        <td>Boxer</td>
+        <td>Loves to be in the outdoors</td> 
+        <td>7</td>
+      </tr>
+   <!- Kat: Took out xtra tr tag->
+    </table>
+      
+    <div></div> <!- to make a larger gap between the table and the list->
+  
+  <!-visual line break->
+  <hr>
+
+    <!-Gabe: Inspired by w3schools example->
+    <div class="container mt-3">
+      <h2>Fun facts about us</h2>
+      <!-<p>To create an inline flexbox container, use the d-inline-flex class:</p>->
+      <p>Listed in alphabetical order:</p>
+      <div class="d-inline-flex-column p-1 text-white" style="background-color: rgb(255, 255, 255);">  
+        <div class="p-2" style="background-color:#50A2A7;">
+          <strong><span style="color:rgb(230, 236, 236)">Bella</span>:</strong> Weimaraners are nick-named
+          <span style="color:grey;font-weight:bold">Grey-Ghosts</span>,
+          for their short and <em>smooth</em> grey hair.</div>
+        <div class="p-2" style="background-color:#9B2915;">
+          <span style="color:rgb(255, 255, 255)"><strong>Buck</strong>:</span>
+          A fun fact about me is that I have two siblings, my brother Grif and my sister Dare!
+        </div>
+        <div class="p-2" style="background-color: #E9B44C;">
+          <span style="color:rgb(255, 255, 255)"><strong> Lily</strong>:</span>
+          A fun fact about me is that I live with three cats and a turtle.
+        </div>
+        <div class="p-2" style="background-color:#1C110A;">
+          <span style="color:rgb(255, 255, 255)"><strong>Soba</strong>:</span>
+          A fun fact about me is that I'm a shelter kitty. Adopt, don't shop. :)
+        </li>
+        </div>
+      </div>
+    </div>
+</body>
+</html>  
+-->
