--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>This is an example of a simple HTML page with one paragraph.</p>
+    </body>
 <style type="text/css">
     table          {border:ridge 2px #000;}
     table td       {border:inset 0px #000;}
@@ -36,6 +44,7 @@
       <td style="background-color:#616065">Cell 6.2</td>
     </tr>
   </table>
+  </html>
 <!--
 <html>
 <head>
