--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <p>This is an example of a simple HTML page with one paragraph.</p>
     </body>
 <style type="text/css">
-    table          {border:ridge 2px #000;}
+    table          {border:ridge 0px #000;}
     table td       {border:inset 0px #000;}
     table tr#Stier  {background-color:#E15554;}
     table tr#Atier  {background-color:#E1893F;}
@@ -21,27 +21,27 @@
   <table>
     <tr id="Stier">
       <td>S</td>
-      <td style="background-color:#616065"> <img src="media/puddle.png" alt="Puddle"></td>
+      <td style="background-color:#616065"> <img src="media/puddle.png" alt="Puddle"> <img src="media/crystal.png" alt=Crystal></td>
     </tr>
     <tr id="Atier">
       <td>A</td>
-      <td style="background-color:#616065">Cell 2.2</td>
+      <td style="background-color:#616065"><img src="media/mosiac.png" alt="Mosaic"> <img src="media/quantum.png" alt="Quantum"></td>
     </tr>
     <tr id="Btier">
       <td>B</td>
-      <td style="background-color:#616065">Cell 3.2</td>
+      <td style="background-color:#616065"><img src="media/rad.png" alt="Rad"> <img src="media/honey.png" alt="Honey"> <img src="media/fire.png" alt="Fire"></td>
     </tr>
     <tr id="Ctier">
       <td>C</td>
-      <td style="background-color:#616065">Cell 4.2</td>
+      <td style="background-color:#616065"><img src="media/pink.png" alt="Pink"> <img src="media/phosphor.png" alt="Phosphor"> <img src="media/tabby.png" alt="Tabby"> <img src="media/dervish.png" alt="Dervish"></td>
     </tr>
     <tr id="Dtier">
       <td>D</td>
-      <td style="background-color:#616065">Cell 5.2</td>
+      <td style="background-color:#616065"><img src="media/rock.png" alt="Rock"> <img src="media/hunter.png" alt="Hunter"></td>
     </tr>
     <tr id="Ftier">
       <td>F</td>
-      <td style="background-color:#616065">Cell 6.2</td>
+      <td style="background-color:#616065"><img src="media/boom.png" alt="Boom"> <img src="media/tangle.png" alt="Tangle"></td>
     </tr>
   </table>
   </html>
