ok now full tiers

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </tr>
     <tr id="Atier">
       <td>A</td>
-      <td style="background-color:#616065"><img src="media/mosiac.png" alt="Mosaic"> <img src="media/quantum.png" alt="Quantum"></td>
+      <td style="background-color:#616065"><img src="media/mosaic.png" alt="Mosaic"> <img src="media/quantum.png" alt="Quantum"></td>
     </tr>
     <tr id="Btier">
       <td>B</td>
