--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-    </body>
-<style type="text/css">
-    table          {border:ridge 0px #000;}
-    table td       {border:inset 0px #000;}
-    table tr#Stier  {background-color:#E15554;}
-    table tr#Atier  {background-color:#E1893F;}
-    table tr#Btier  {background-color:#E1BC29;}
-    table tr#Ctier  {background-color:#3BB273;}
-    table tr#Dtier  {background-color:#4D9DE0;}
-    table tr#Ftier  {background-color:#7768AE;}
-    table tr#Other  {background-color:#616065;}
-  </style>
+    <style type="text/css">
+        h1 {text-align: center;}
 
-  <table>
+        li {display: inline;}
+        
+            table          {border:ridge 0px #000;}
+            table td       {border:inset 0px #000;}
+            table tr#Stier  {background-color:#E15554;}
+            table tr#Atier  {background-color:#E1893F;}
+            table tr#Btier  {background-color:#E1BC29;}
+            table tr#Ctier  {background-color:#3BB273;}
+            table tr#Dtier  {background-color:#4D9DE0;}
+            table tr#Ftier  {background-color:#7768AE;}
+            table tr#Other  {background-color:#616065;}
+          </style>
+
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="rat.html">Description</a></li>
+  </ul>
+
+    <head>           
+        <title>Slime Tier List</title>
+    </head>
+
+    <h1>- Tier List of Obtainable Slimes -</h1>
+
+  <table style="border:1px solid black;margin-left:auto;margin-right:auto;">
     <tr id="Stier">
       <td>S</td>
       <td style="background-color:#616065"> <img src="media/puddle.png" alt="Puddle"> <img src="media/crystal.png" alt=Crystal></td>
@@ -93,7 +102,6 @@
 <body>
   <nav class="navbar navbar-expand-sm">
     <a class="navbar-brand" href="#">
-      <!-Changing our logo to white to match our aesthetic->
     <img src="media/white-pawprint.png" alt="pawprint" width="60">
   </a>
   
