--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <style type="text/css">
-        h1 {text-align: center;}
-
-        li {display: inline;}
-        
-            table          {border:ridge 0px #000;}
-            table td       {border:inset 0px #000;}
-            table tr#Stier  {background-color:#E15554;}
-            table tr#Atier  {background-color:#E1893F;}
-            table tr#Btier  {background-color:#E1BC29;}
-            table tr#Ctier  {background-color:#3BB273;}
-            table tr#Dtier  {background-color:#4D9DE0;}
-            table tr#Ftier  {background-color:#7768AE;}
-            table tr#Other  {background-color:#616065;}
-          </style>
-
+    <link rel="stylesheet" type="text/css" href="sin.css"/>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="rat.html">Description</a></li>
