--- a/rat.html
+++ b/rat.html
@@ -9,7 +9,9 @@
       <title> Description </title>
     </head>
 
-    <table>
+    <h1>- Description -</h1>
+
+    <table class="table2">
         <tbody>
         <tr>
           <td rowspan="4"><img src="media/pink.png" alt="Pink"></td>
