--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>- Tier List of Obtainable Slimes -</h1>
 
-  <table>
+  <table class="table1">
     <tr id="Stier">
       <td>S</td>
       <td style="background-color:#616065"> <img src="media/puddle.png" alt="Puddle"> <img src="media/crystal.png" alt=Crystal></td>
