--- a/rat.html
+++ b/rat.html
@@ -27,7 +27,7 @@
           <td><strong>Obtaining:</strong> easy - very common</td>
         </tr>
         <tr>
-          <td rowspan="4"><strong>Pink Slime</strong></td>
+          <td rowspan="4"><em>Pink Slime</em></td>
           <td><strong>Bonus:</strong> kirby who?</td>
         </tr>
         </tbody>
