--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" type="text/css" href="sin.css"/>
+  <head>           
+      <title>Slime Tier List</title>
+  </head>
+  <body>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="rat.html">Description</a></li>
   </ul>
-
-    <head>           
-        <title>Slime Tier List</title>
-    </head>
-
     <h1>- Tier List of Obtainable Slimes -</h1>
 
   <table class="table1">
@@ -37,8 +36,9 @@
       <td>F</td>
       <td style="background-color:#616065"><img src="media/boom.png" alt="Boom"> <img src="media/tangle.png" alt="Tangle"></td>
     </tr>
-  </table>
-  </html>
+    </table>
+  </body>
+</html>
 <!--
 <html>
 <head>
