--- a/rat.html
+++ b/rat.html
@@ -8,13 +8,13 @@
   <head> 
       <title> Description </title>
     </head>
-
+<body>
     <h1>- Description -</h1>
 
     <table class="table2">
         <tbody>
         <tr>
-          <td rowspan="4"><img src="media/pink.png" alt="Pink"></td>
+          <td class="td2" rowspan="4"><img src="media/pink.png" alt="Pink"></td>
           <td><strong>Profit:</strong> low value - early game slime (7)</td>
         </tr>
         <tr>
@@ -27,9 +27,10 @@
           <td><strong>Obtaining:</strong> easy - very common</td>
         </tr>
         <tr>
-          <td rowspan="4"><em>Pink Slime</em></td>
+          <td class="td2"><em>Pink Slime</em></td>
           <td><strong>Bonus:</strong> kirby who?</td>
         </tr>
         </tbody>
-    </table>
+     </table>
+    </body>
   </html>
