sign seal delivery

--- a/rat.html
+++ b/rat.html
@@ -12,9 +12,13 @@
     <h1>- Description -</h1>
 
     <table class="table2">
+      <tr>
+        <th style="width:135px"></th>
+        <th style="width:800px"></th>
+      </tr>
         <tbody>
         <tr>
-          <td class="td2" rowspan="4"><img src="media/pink.png" alt="Pink"></td>
+          <td class="td2" rowspan="4"><img src="media/pink.png" width="65" alt="Pink"></td>
           <td><strong>Profit:</strong> low value - early game slime (7)</td>
         </tr>
         <tr>
@@ -27,7 +31,7 @@
           <td><strong>Obtaining:</strong> easy - very common</td>
         </tr>
         <tr>
-          <td class="td2"><em>Pink Slime</em></td>
+          <td class="td2"><span style="color: #DD4265"><strong>Pink Slime</strong></span></td>
           <td><strong>Bonus:</strong> kirby who?</td>
         </tr>
         </tbody>
