--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
     <h1>- Tier List of Obtainable Slimes -</h1>
 
   <table class="table1">
+    <tr>
+      <th class="th2"></th>
+      <th class="th3"></th>
+    </tr>
     <tr id="Stier">
-      <td>S</td>
+      <td class="td2"><strong>S</strong></td>
       <td style="background-color:#616065"> <img src="media/puddle.png" alt="Puddle"> <img src="media/crystal.png" alt=Crystal></td>
     </tr>
     <tr id="Atier">
-      <td>A</td>
+      <td class="td2"><strong>A</strong></td>
       <td style="background-color:#616065"><img src="media/mosaic.png" alt="Mosaic"> <img src="media/quantum.png" alt="Quantum"></td>
     </tr>
     <tr id="Btier">
-      <td>B</td>
+      <td class="td2"><strong>B</strong></td>
       <td style="background-color:#616065"><img src="media/rad.png" alt="Rad"> <img src="media/honey.png" alt="Honey"> <img src="media/fire.png" alt="Fire"></td>
     </tr>
     <tr id="Ctier">
-      <td>C</td>
+      <td class="td2"><strong>C</strong></td>
       <td style="background-color:#616065"><img src="media/pink.png" alt="Pink"> <img src="media/phosphor.png" alt="Phosphor"> <img src="media/tabby.png" alt="Tabby"> <img src="media/dervish.png" alt="Dervish"></td>
     </tr>
     <tr id="Dtier">
-      <td>D</td>
+      <td class="td2"><strong>D</strong></td>
       <td style="background-color:#616065"><img src="media/rock.png" alt="Rock"> <img src="media/hunter.png" alt="Hunter"></td>
     </tr>
     <tr id="Ftier">
-      <td>F</td>
+      <td class="td2"><strong>F</strong></td>
       <td style="background-color:#616065"><img src="media/boom.png" alt="Boom"> <img src="media/tangle.png" alt="Tangle"></td>
     </tr>
     </table>
