--- a/rat.html
+++ b/rat.html
@@ -33,7 +33,398 @@
         <tr>
           <td><strong>Bonus:</strong> kirby who?</td>
           <td class="td3"><span style="color: #DD4265"><strong>Pink Slime</strong></span></td>
-          
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> low value - early game slime (15)</td>
+          <td class="td2" rowspan="4"><img src="media/rock.png" width="65" alt="Rock"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - can cause player damage (direct) </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> vegetables (Heart Beet)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> easy - very common</td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> nice sonic reference</td>
+          <td class="td3"><span style="color: #035B9B"><strong>Rock Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+    
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong>  low value - early game slime (15)</td>
+          <td class="td2" rowspan="4"><img src="media/phosphor.png" width="65" alt="Phosphor"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> high - cannot be exposed to sunlight, can escape without proper upgrades</td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> easy - fruit (Cuberry)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> Obtaining: easy - very common</td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> you would not believe your eyes</td>
+          <td class="td3"><span style="color: #7D7EC3"><strong>Phosphor Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> low value - early game slime (15)</td>
+          <td class="td2" rowspan="4"><img src="media/tabby.png" width="65" alt="Tabby"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - can escape without proper upgrades </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> high - meat (Stony Hen)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> easy - very common</td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> rule zero</td>
+          <td class="td3"><span style="color: #6B695E"><strong>Tabby Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> low value - basic (30)</td>
+          <td class="td2" rowspan="4"><img src="media/Rad.png" width="65" alt="Rad"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - can cause player damage (AOE) </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> easy - vegetables (Oca Oca)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong>  moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong>  rad-x required</td>
+          <td class="td3"><span style="color: #159015"><strong>Rad Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> low value - basic (30)</td>
+          <td class="td2" rowspan="4"><img src="media/boom.png" width="65" alt="Boom"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - can cause player damage (AOE) </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong>  high - meat (Briar Hen)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> easy - common </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> >:( </td>
+          <td class="td3"><span style="color: #700000"><strong>Boom Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> low value - basic (30)</td>
+          <td class="td2" rowspan="4"><img src="media/honey.png" width="65" alt="Honey"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> low - basic  </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> low - fruit (Mint Mango)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong>  bees? </td>
+          <td class="td3"><span style="color: #8F4900"><strong>Honey Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> moderate value - passive resource production (45)</td>
+          <td class="td2" rowspan="4"><img src="media/puddle.png" width="65" alt="Puddle"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong>  low - pre existing habitat </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong>  none </td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> easy - common (only in water pools) </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> perfect, adorable, A+  </td>
+          <td class="td3"><span style="color: #0A6080"><strong>Puddle Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> moderate value - basic (60)</td>
+          <td class="td2" rowspan="4"><img src="media/crystal.png" width="65" alt="Crystal"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - can cause player damage (direct)  </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> low - vegetables (Odd Onion) </td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> shiny, pretty, love em  </td>
+          <td class="td3"><span style="color: #6335A9"><strong>Crystal Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong>moderate value - basic (60)</td>
+          <td class="td2" rowspan="4"><img src="media/hunter.png" width="65" alt="Hunter"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> low - basic </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong>  high - meat (Roostro)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong>  high - rare (cloaking) </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong>  literally cannot find them, i have only seen three in my 55 hours of gameplay </td>
+          <td class="td3"><span style="color: #77453C"><strong>Hunter Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong>moderate value - basic (60)</td>
+          <td class="td2" rowspan="4"><img src="media/quantum.png" width="65" alt="Quantum"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> high - can teleport, will escape without proper upgrades  </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> moderate - fruit (Phase Lemon)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong>  high barrier of entry but worth it </td>
+          <td class="td3"><span style="color: #C3902A"><strong>Quantum Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong>moderate value - basic (50)</td>
+          <td class="td2" rowspan="4"><img src="media/fire.png" width="65" alt="Fire"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - specific habitat necessary  </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong>  low - all (not necessary)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong> high - rare </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> calcifer <3 </td>
+          <td class="td3"><span style="color: #F73924"><strong>Fire Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> high value - basic (75)</td>
+          <td class="td2" rowspan="4"><img src="media/dervish.png" height="50" alt="Dervish"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> moderate - can create cyclones </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong> low - fruit (Prickle Pear)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong>  moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> reminds me of jar jar binks, i will not be elaborating on this </td>
+          <td class="td3"><span style="color: #784B8B"><strong>Derivsh Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> high value - basic (75)</td>
+          <td class="td2" rowspan="4"><img src="media/tangle.png" width="65" alt="Tangle"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong> can disrupt environment outside of environment (AOE) </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong>high - meat (Painted Hen)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong>  moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> i refuse to keep this slime because it is so annoying </td>
+          <td class="td3"><span style="color: #2D9A85"><strong>Tangle Slime</strong></span></td>
+        </tr>
+        </tbody>
+     </table>
+
+     <br>
+
+     <table class="table2">
+      <tr>
+        <th style="width:800px"></th>
+        <th style="width:135px"></th>
+      </tr>
+        <tbody>
+        <tr>
+          <td><strong>Profit:</strong> high value - basic (75)</td>
+          <td class="td2" rowspan="4"><img src="media/mosaic.png" wisth="65" alt="Mosaic"></td>
+        </tr>
+        <tr>
+          <td><strong>Housing:</strong>  moderate - can cause player damage (AOE) </td>
+        </tr>
+        <tr>
+         <td><strong>Feeding:</strong>moderate - vegetables (Silver Parsnip)</td>
+        </tr>
+        <tr>
+          <td><strong>Obtaining:</strong>  moderate - uncommon </td>
+        </tr>
+        <tr>
+          <td><strong>Bonus:</strong> definitely a leo </td>
+          <td class="td3"><span style="color: #2A3ACF"><strong>Mosaic Slime</strong></span></td>
         </tr>
         </tbody>
      </table>
